// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Amount"
    type="number"
    value=""
  />
  <withLocale(defaultProps(DatePicker))
    onChange={[Function]}
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="type something(optional)"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Expense
    </button>
  </div>
</form>
`;

exports[`should render ExpenseForm with expense data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value="test01"
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Amount"
    type="number"
    value={195}
  />
  <withLocale(defaultProps(DatePicker))
    onChange={[Function]}
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="type something(optional)"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Expense
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <p
    className="form__message"
  >
    Please provide description and amount.
  </p>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Amount"
    type="number"
    value=""
  />
  <withLocale(defaultProps(DatePicker))
    onChange={[Function]}
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="type something(optional)"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Expense
    </button>
  </div>
</form>
`;
